--- a/style/components/_header.scss
+++ b/style/components/_header.scss
@@ -29,6 +29,7 @@
   align-items: center;
   gap: 10px;
 }
+
 .logom {
   // width: 10px;
 }
@@ -122,22 +123,20 @@
   width: 6rem;
   height: 40px;
   background-color: #2952e3;
-  border-radius: 20px;
+  border-radius: 15px;
   /* height: 3rem; */
   list-style-type: none;
-  -webkit-transition: 0.2s;
+
   transition: 0.2s;
   margin-right: 10px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
+
   justify-content: center;
   color: aliceblue;
   font-weight: bold;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
+
   align-items: center;
   margin-left: 20px;
 }
@@ -148,6 +147,41 @@
 }
 
 .loginB:hover {
+  background-color: #2243b9;
+  transform: scale(1.1);
+  /* box-shadow: #2f71ff70 0px 0px 39px 0px;  */
+}
+
+.signup {
+  cursor: pointer;
+  line-height: 60px;
+  width: 6rem;
+  height: 40px;
+  background-color: #2952e3;
+  border-radius: 15px;
+  /* height: 3rem; */
+  list-style-type: none;
+
+  transition: 0.2s;
+  margin-right: 10px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+
+  justify-content: center;
+  color: aliceblue;
+  font-weight: bold;
+
+  align-items: center;
+  margin-left: 20px;
+}
+
+.signup a {
+  text-decoration: none;
+  color: aliceblue;
+}
+
+.signup:hover {
   background-color: #2243b9;
   transform: scale(1.1);
   /* box-shadow: #2f71ff70 0px 0px 39px 0px;  */
