--- a/style/style1.scss
+++ b/style/style1.scss
@@ -16,6 +16,8 @@ body {
 @import "components/_pcbuilder";
 @import "components/_homePage";
 @import "components/_profile";
+@import "components/vendorLogin";
+@import "components/_admin";
 
 // eror msg styling
 .top-msg {
