--- a/style/style1.css
+++ b/style/style1.css
@@ -13,14 +13,8 @@ body {
   width: 100%;
   height: 64px;
   /* background-color: rgba(112, 112, 112, 0.459); */
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
   justify-content: center;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
   align-items: center;
 }
 
@@ -28,15 +22,9 @@ body {
   width: 90%;
   border-radius: 20px;
   /* background-color: rgba(0, 0, 0, 0.199); */
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   margin-top: 40px;
-  -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
   justify-content: space-between;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
   align-items: center;
   gap: 10px;
 }
@@ -60,28 +48,16 @@ body {
 }
 
 .nav-barIn {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
   align-items: center;
-  -webkit-box-pack: space-evenly;
-  -ms-flex-pack: space-evenly;
   justify-content: space-evenly;
   width: 100%;
   margin-right: -10px;
 }
 
 .nav-bar {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
   align-items: center;
-  -webkit-box-pack: space-evenly;
-  -ms-flex-pack: space-evenly;
   justify-content: space-evenly;
   width: -webkit-fit-content;
   width: -moz-fit-content;
@@ -102,21 +78,15 @@ body {
   font-size: 18px;
   line-height: 60px;
   color: aliceblue;
-  -webkit-transition: 0.2s;
   transition: 0.2s;
   cursor: pointer;
-  -webkit-transition: -webkit-transform 0.2s;
-  transition: -webkit-transform 0.2s;
   transition: transform 0.2s;
-  transition: transform 0.2s, -webkit-transform 0.2s;
 }
-
 .nav-link a {
   text-decoration: none;
   color: aliceblue;
   font-weight: 600;
 }
-
 .nav-link a:hover {
   /* background-color: #00ccff; */
   /* transform: scale(1.2); */
@@ -127,8 +97,7 @@ body {
 
 .nav-link:hover {
   /* transition: transform .2s; */
-  -webkit-transform: scale(1.2);
-          transform: scale(1.2);
+  transform: scale(1.2);
 }
 
 .loginB {
@@ -137,22 +106,15 @@ body {
   width: 6rem;
   height: 40px;
   background-color: #2952e3;
-  border-radius: 20px;
+  border-radius: 15px;
   /* height: 3rem; */
   list-style-type: none;
-  -webkit-transition: 0.2s;
   transition: 0.2s;
   margin-right: 10px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
   justify-content: center;
   color: aliceblue;
   font-weight: bold;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
   align-items: center;
   margin-left: 20px;
 }
@@ -164,8 +126,37 @@ body {
 
 .loginB:hover {
   background-color: #2243b9;
-  -webkit-transform: scale(1.1);
-          transform: scale(1.1);
+  transform: scale(1.1);
+  /* box-shadow: #2f71ff70 0px 0px 39px 0px;  */
+}
+
+.signup {
+  cursor: pointer;
+  line-height: 60px;
+  width: 6rem;
+  height: 40px;
+  background-color: #2952e3;
+  border-radius: 15px;
+  /* height: 3rem; */
+  list-style-type: none;
+  transition: 0.2s;
+  margin-right: 10px;
+  display: flex;
+  justify-content: center;
+  color: aliceblue;
+  font-weight: bold;
+  align-items: center;
+  margin-left: 20px;
+}
+
+.signup a {
+  text-decoration: none;
+  color: aliceblue;
+}
+
+.signup:hover {
+  background-color: #2243b9;
+  transform: scale(1.1);
   /* box-shadow: #2f71ff70 0px 0px 39px 0px;  */
 }
 
@@ -190,21 +181,12 @@ body {
 }
 
 .bg1 {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
   flex-direction: column;
 }
 
 .login {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
   justify-content: center;
   height: 100vh;
   margin-top: 62px;
@@ -219,7 +201,7 @@ body {
         background-color: radial-gradient(circle, rgba(136,0,255,1) 0%, rgba(0,211,255,1) 94%);
         width: 100%;
         height: 40px;
-        
+
         border-radius: 5px;
         border: none;
     } */
@@ -232,19 +214,11 @@ body {
   height: -moz-fit-content;
   height: fit-content;
   padding-bottom: 45px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
   flex-direction: column;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
   justify-content: center;
   color: #b0c3ff;
 }
-
 .loginF p {
   margin-top: 20px;
   text-align: center;
@@ -254,7 +228,7 @@ body {
   margin-bottom: 30px;
 }
 
-.loginF input[type="text"] {
+.loginF input[type=text] {
   width: 95%;
   height: 40px;
   padding: 0px 0px 0px 20px;
@@ -265,7 +239,7 @@ body {
   border: none;
 }
 
-.loginF input[type="password"] {
+.loginF input[type=password] {
   width: 100%;
   height: 40px;
   border-radius: 10px;
@@ -289,7 +263,7 @@ body {
         background-color: radial-gradient(circle, rgba(136,0,255,1) 0%, rgba(0,211,255,1) 94%);
         width: 100%;
         height: 40px;
-        
+
         border-radius: 5px;
         border: none;
     } */
@@ -302,17 +276,17 @@ body {
   height: -moz-fit-content;
   height: fit-content;
   padding-bottom: 45px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
   flex-direction: column;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
   justify-content: center;
   color: #b0c3ff;
+}
+
+.switch {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  background-color: #00d3ff;
 }
 
 .signupF h1 {
@@ -321,7 +295,7 @@ body {
   color: white;
 }
 
-.signupF input[type="text"] {
+.signupF input[type=text] {
   width: 100%;
   height: 40px;
   border-radius: 10px;
@@ -331,7 +305,7 @@ body {
   border: none;
 }
 
-.signupF input[type="password"] {
+.signupF input[type=password] {
   width: 100%;
   height: 40px;
   border-radius: 10px;
@@ -353,7 +327,6 @@ body {
   margin-top: 20px;
   margin-top: 30px;
 }
-
 .signupF p a {
   background-color: #2952e3;
   padding: 5px 10px;
@@ -361,15 +334,12 @@ body {
   color: white;
   font-weight: bold;
   text-decoration: none;
-  -webkit-transition: 0.2s;
   transition: 0.2s;
   margin-left: 10px;
 }
-
 .signupF p a:hover {
   background-color: #4a6ce6;
-  -webkit-transform: scale(1.5);
-          transform: scale(1.5);
+  transform: scale(1.5);
 }
 
 .btn-grad {
@@ -377,7 +347,6 @@ body {
   padding: 10px 10px;
   text-align: center;
   text-transform: uppercase;
-  -webkit-transition: 0.5s;
   transition: 0.5s;
   background-size: 200% auto;
   width: 100%;
@@ -399,18 +368,9 @@ body {
   height: -webkit-fit-content;
   height: -moz-fit-content;
   height: fit-content;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
   flex-direction: column;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
   justify-content: center;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
   align-items: center;
 }
 
@@ -418,51 +378,42 @@ body {
   .logo {
     width: 100%;
   }
+
   .container {
     margin-top: auto;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: column;
     flex-direction: column;
     width: 95%;
   }
+
   .navigation {
     width: 100%;
     height: auto;
   }
+
   .nav-link {
     width: 100%;
     text-align: left;
   }
+
   .nav-bar {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: column;
     flex-direction: column;
   }
 }
-
 .body {
   height: -webkit-fit-content;
   height: -moz-fit-content;
   height: fit-content;
   width: 87vw;
   margin: 100px auto;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  justify-content: space-between;
 }
-
 .body .PcContainer {
   width: 58vw;
   height: -webkit-fit-content;
   height: -moz-fit-content;
   height: fit-content;
 }
-
 .body .PcContainer .core {
   padding: 20px;
   background-color: #211f349c;
@@ -470,11 +421,9 @@ body {
   height: 500px;
   border-radius: 30px;
 }
-
 .body .PcContainer .core p {
   color: white;
 }
-
 .body .PcContainer .core .heading {
   border: 10px solid #ad00ff;
   border-image-slice: 1;
@@ -490,40 +439,30 @@ body {
   margin-top: -50px;
   margin-left: 20px;
 }
-
 .body .PcContainer .core .inside {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   gap: 60px;
   margin-bottom: 20px;
 }
-
-.body .PcContainer .core .compo {
+.body .PcContainer .core .inside .compo {
   margin-top: 30px;
   margin-left: 25px;
 }
-
-.body .PcContainer .core .compo p {
+.body .PcContainer .core .inside .compo p {
+  text-transform: uppercase;
   margin-bottom: 20px;
   font-size: 21px;
   font-weight: 600;
 }
-
-.body .PcContainer .core .compo .option {
-  display: -webkit-box;
-  display: -ms-flexbox;
+.body .PcContainer .core .inside .compo .option {
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  justify-content: space-between;
   width: -webkit-fit-content;
   width: -moz-fit-content;
   width: fit-content;
   gap: 20px;
 }
-
-.body .PcContainer .core .compo .option select {
+.body .PcContainer .core .inside .compo .option select {
   font-size: 15px;
   padding: 5px 15px;
   text-align: center;
@@ -531,42 +470,29 @@ body {
   border: 3px solid #ad00ff;
   border-radius: 15px;
 }
-
-.body .PcContainer .core .compo .option select option {
+.body .PcContainer .core .inside .compo .option select option {
   color: white;
 }
-
 .body .pc {
   margin-left: 65vw;
   position: -webkit-sticky;
   position: fixed;
   top: 125px;
 }
-
 .body .pc img {
   width: 350px;
 }
 
 .mainH {
   margin-top: 60px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 * {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
@@ -604,7 +530,6 @@ img {
   color: white;
   font-weight: bold;
   font-size: 18px;
-  -webkit-transition: 0.6s ease;
   transition: 0.6s ease;
   border-radius: 0 3px 3px 0;
   -webkit-user-select: none;
@@ -681,7 +606,6 @@ img {
     opacity: 1;
   }
 }
-
 @keyframes fade {
   from {
     opacity: 0.4;
@@ -690,14 +614,9 @@ img {
     opacity: 1;
   }
 }
-
 .row {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  justify-content: center;
 }
 
 .column {
@@ -736,17 +655,14 @@ img {
   text-align: center;
   color: white;
 }
-
 .homeconatinerPc .img {
   height: 600px;
   overflow: hidden;
 }
-
 .homeconatinerPc .img img {
   width: 100%;
   border-radius: 20px;
 }
-
 .homeconatinerPc .contentOP {
   z-index: 2;
   position: absolute;
@@ -756,34 +672,27 @@ img {
   padding: 20px;
   border-radius: 20px;
 }
-
 .homeconatinerPc .contentOP h1 {
   font-size: 65px;
 }
-
 .homeconatinerPc .contentOP p {
   font-size: 25px;
 }
-
 .homeconatinerPc .contentOP .btn_builder button {
   margin-top: 20px;
   padding: 10px 20px;
   background-color: #1b1927;
-  border: 2px solid magenta;
+  border: 2px solid fuchsia;
   border-radius: 20px;
   font-size: 20px;
   cursor: pointer;
 }
-
 .homeconatinerPc .contentOP .btn_builder button:hover {
   background-color: rgba(255, 0, 255, 0.39);
-  -webkit-box-shadow: 4px 4px 20px rgba(255, 0, 0, 0.37);
-          box-shadow: 4px 4px 20px rgba(255, 0, 0, 0.37);
+  box-shadow: 4px 4px 20px rgba(255, 0, 0, 0.37);
 }
-
 .homeconatinerPc .contentOP .btn_builder button:active {
-  -webkit-box-shadow: 2px 2px 20px rgba(255, 255, 255, 0.37);
-          box-shadow: 2px 2px 20px rgba(255, 255, 255, 0.37);
+  box-shadow: 2px 2px 20px rgba(255, 255, 255, 0.37);
 }
 
 .userbox {
@@ -793,20 +702,12 @@ img {
   height: -moz-fit-content;
   height: fit-content;
   padding: 30px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  flex-direction: column;
+  align-items: center;
   margin: 50px auto;
   border-radius: 20px;
 }
-
 .userbox .details p {
   margin: 25px 0px;
 }
@@ -821,5 +722,4 @@ img {
   border-radius: 20px;
   margin-left: 40vw;
   text-align: center;
-}
-/*# sourceMappingURL=style1.css.map */
+}/*# sourceMappingURL=style1.css.map */
