vendor admin page created

--- a/style/style1.scss
+++ b/style/style1.scss
@@ -17,6 +17,7 @@ body {
 @import "components/_homePage";
 @import "components/_profile";
 @import "components/vendorLogin";
+@import "components/vendorSignup";
 @import "components/_admin";
 
 // eror msg styling
