--- a/style/components/_bg.scss
+++ b/style/components/_bg.scss
@@ -1,6 +1,6 @@
 .bg1 {
   /* height: 1080px; */
-  height: 1080px;
+  height: fit-content;
   width: 100%;
   background-color: #0f0e13;
   background-image: radial-gradient(at 400% 400%, #100f15 0, transparent 50%),
