--- a/style/style1.scss
+++ b/style/style1.scss
@@ -6,7 +6,7 @@ $btncolor: #2952e3;
   color: rgb(182, 223, 255);
 }
 body {
-  background-color: #0f0e13;
+  // background-color: #0f0e13;
 }
 @import "components/_header";
 @import "components/_bg";
