--- a/style/style1.css
+++ b/style/style1.css
@@ -712,6 +712,11 @@ img {
   margin: 25px 0px;
 }
 
+.adminLogin {
+  background: red;
+  color: yellow;
+}
+
 .top-msg {
   background-color: rgba(236, 236, 236, 0.144);
   width: 15vw;
