--- a/style/components/_admin.scss
+++ b/style/components/_admin.scss
@@ -1,4 +1,45 @@
-.adminLogin{
-    background: red;
-    color: yellow;
+.adminbg{
+    background: rgb(0,85,102);
+    background: radial-gradient(circle, rgba(0,85,102,1) 12%, rgba(3,0,47,1) 100%);
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    .adminMain{
+        display: flex;
+        align-items: center;
+        gap: 50px;
+        .adminFLogo{
+            width: 300px;
+        }
+        .adminInnerForm{
+            display: flex;
+            flex-direction: column;
+             align-items: center;
+
+            gap: 20px;
+            h2{
+                font-size: 15px;
+                margin-bottom: 60px;
+            }
+            form{
+                width: 300px;
+                display: flex;
+                flex-direction: column;
+                align-items: flex-start;
+                input[type="text"],
+                input[type="password"]{
+                    height: 30px;
+                    width: 90%; 
+                }
+                input[type="submit"]{
+                    width: 90%;
+                    background-color: rgb(0, 0, 0);
+                    border: none;
+                    padding: 10px 20px;
+                    border-radius: 15px;
+                }
+            }
+        }
+    }
 }
