--- a/style/style1.scss
+++ b/style/style1.scss
@@ -19,6 +19,7 @@ body {
 @import "components/vendorLogin";
 @import "components/vendorSignup";
 @import "components/_admin";
+@import "components/_adminHome";
 
 // eror msg styling
 .top-msg {
