--- a/style/components/_admin.scss
+++ b/style/components/_admin.scss
@@ -1,45 +1,74 @@
-.adminbg{
-    background: rgb(0,85,102);
-    background: radial-gradient(circle, rgba(0,85,102,1) 12%, rgba(3,0,47,1) 100%);
-    height: 100vh;
+.adminbg {
+  background: rgb(0, 85, 102);
+  background: radial-gradient(
+    circle,
+    rgba(0, 85, 102, 1) 12%,
+    rgba(3, 0, 47, 1) 100%
+  );
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  .adminMain {
     display: flex;
     align-items: center;
-    justify-content: center;
-    .adminMain{
-        display: flex;
-        align-items: center;
-        gap: 50px;
-        .adminFLogo{
-            width: 300px;
-        }
-        .adminInnerForm{
-            display: flex;
-            flex-direction: column;
-             align-items: center;
-
-            gap: 20px;
-            h2{
-                font-size: 15px;
-                margin-bottom: 60px;
-            }
-            form{
-                width: 300px;
-                display: flex;
-                flex-direction: column;
-                align-items: flex-start;
-                input[type="text"],
-                input[type="password"]{
-                    height: 30px;
-                    width: 90%; 
-                }
-                input[type="submit"]{
-                    width: 90%;
-                    background-color: rgb(0, 0, 0);
-                    border: none;
-                    padding: 10px 20px;
-                    border-radius: 15px;
-                }
-            }
-        }
+    gap: 50px;
+    .adminFLogo {
+      width: 300px;
     }
+    .adminInnerForm {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+
+      gap: 20px;
+      h2 {
+        font-size: 15px;
+        margin-bottom: 30px;
+      }
+      form {
+        width: 300px;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+
+        input[type="text"],
+        input[type="password"] {
+          color: rgb(43, 43, 43);
+          height: 30px;
+          width: 90%;
+          border-radius: 15px;
+          padding-left: 15px;
+        }
+        input[type="submit"] {
+          width: 100%;
+          background-color: #1aa4e2;
+          color: rgb(255, 255, 255);
+          font-weight: 700;
+          font-size: 15px;
+          border: none;
+          padding: 10px 20px;
+          border-radius: 15px;
+          margin-top: 20px;
+          transition: all 0.2s;
+          &:hover {
+            background-color: #7cd5ff;
+            transform: scale(1.1);
+          }
+          &:active {
+            background-color: #ffffff;
+            transform: scale(1.2);
+          }
+        }
+        div {
+          display: flex;
+          align-items: center;
+          gap: 10px;
+          img {
+            width: 12%;
+          }
+        }
+      }
+    }
+  }
 }
