--- a/style/components/_bg.scss
+++ b/style/components/_bg.scss
@@ -1,6 +1,7 @@
 .bg1 {
   /* height: 1080px; */
-  height: fit-content;
+  height: 100%;
+  min-height: 100vh;
   width: 100%;
   background-color: #0f0e13;
   background-image: radial-gradient(at 400% 400%, #100f15 0, transparent 50%),
@@ -9,7 +10,9 @@
 }
 
 .bg2 {
-  height: 1080px;
+  height: 100%;
+  min-height: 100vh;
+
   width: 100%;
   background-color: #0f0e13;
   background-image: radial-gradient(at 0% 0%, #100f15 0, transparent 50%),
@@ -22,12 +25,8 @@
 }
 
 .bg1 {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
   flex-direction: column;
+  width: 100%;
   // align-items: center;
 }
