--- a/style/components/_profile.scss
+++ b/style/components/_profile.scss
@@ -2,13 +2,17 @@
   width: 40vw;
   background-color: rgba(0, 0, 0, 0.178);
   height: fit-content;
-  padding: 30px;
+  padding: 80px;
   display: flex;
   flex-direction: column;
   align-items: center;
   margin: 50px auto;
+  margin-top: 100px;
   border-radius: 20px;
   .details p {
     margin: 25px 0px;
+  }
+  .pic {
+    margin-bottom: 30px;
   }
 }
