admin opage halka change

--- a/style/style1.css
+++ b/style/style1.css
@@ -865,6 +865,22 @@ img {
   width: 12%;
 }
 
+* {
+  color: black;
+}
+
+.body {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+.body .sidebarA {
+  padding-left: 100px;
+}
+.body .mainA {
+  position: static;
+}
+
 .top-msg {
   background-color: rgba(236, 236, 236, 0.144);
   width: 15vw;
