Pc building featured created and used ajax beta

--- a/style/components/_adminHome.scss
+++ b/style/components/_adminHome.scss
@@ -1,17 +1,63 @@
-* {
-  color: black;
-}
-.body {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
+.bodyA {
+  * {
+    color: black;
+  }
+  // display: flex;
+  // flex-direction: row;
+  // align-items: center;
+  height: 100vh;
+  min-height: fit-content;
+  // background-color: black;
+  top: 0;
   .sidebarA {
-    // position: fixed;
-    // left: 0;
+    display: flex;
+    flex-direction: column;
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 20vw;
+    background-color: black;
+    height: 100%;
+    align-items: center;
 
-    padding-left: 100px;
+    img {
+      width: 15vw;
+      margin-top: 50px;
+    }
+
+    * {
+      color: aliceblue;
+    }
+
+    ul {
+      height: 60vh;
+      width: 100%;
+      text-align: center;
+      li {
+        width: 100%;
+        border: solid grey 1px;
+        padding: 10px 10px;
+      }
+    }
   }
   .mainA {
-    position: static;
+    // margin: 30px 30px;
+    margin-top: 40px;
+    // position: static;
+    margin-left: 25vw;
+    height: 200vh;
+    .productsEnlisted {
+      margin-top: 40px;
+      .productsAdmin {
+        width: 30vw;
+        border: solid 2px;
+        border-radius: 20px;
+        padding: 10px 20px;
+        .categoryH li {
+          margin: 5px 0;
+          font-size: 16px;
+        }
+      }
+    }
   }
 }
