--- a/style/components/_admin.scss
+++ b/style/components/_admin.scss
@@ -22,7 +22,11 @@
       align-items: center;
 
       gap: 20px;
+      h1 {
+        color: #caefff;
+      }
       h2 {
+        color: #caefff;
         font-size: 15px;
         margin-bottom: 30px;
       }
