--- a/style/components/_pcbuilder.scss
+++ b/style/components/_pcbuilder.scss
@@ -1,4 +1,7 @@
 .body {
+  * {
+    color: white;
+  }
   height: fit-content;
   width: 87vw;
   // background-color: #0f0e13;
@@ -40,22 +43,26 @@
           margin-top: 30px;
           margin-left: 25px;
           p {
-            text-transform: uppercase;
+            text-transform: capitalize;
             margin-bottom: 20px;
             font-size: 21px;
             font-weight: 600;
             // text-align: center;
           }
           .option {
-            #company * {
-            }
             display: flex;
             justify-content: space-between;
             width: fit-content;
             gap: 20px;
+            #CPUmodel {
+              // padding: 0 39px;
+              width: 150px;
+            }
             select {
-              font-size: 15px;
-              padding: 5px 15px;
+              min-width: 150px;
+
+              font-size: 17px;
+              padding: 7px 0;
               text-align: center;
               background-color: #2e3249;
               border: 3px solid #ad00ff;
