--- a/style/components/_vendorLogin.scss
+++ b/style/components/_vendorLogin.scss
@@ -1,5 +1,5 @@
 .vendorLogbg {
-  background-color: rgb(0, 0, 0);
+  background-color: rgb(234, 252, 255);
   //   background-color: rgb(219, 242, 255);
   width: 100vw;
   height: fit-content;
@@ -56,7 +56,7 @@
         align-items: center;
         justify-content: center;
         gap: 20px;
-        width: 15vw;
+        width: 18vw;
         h1,
         p,
         label {
@@ -67,11 +67,16 @@
         }
         input[type="text"],
         input[type="password"] {
+          padding: 10px;
           width: 100%;
           height: 30px;
+          border-radius: 10px;
         }
         form {
           width: 100%;
+          label {
+            margin: 50px 0px;
+          }
         }
       }
     }
