--- a/style/components/_vendorLogin.scss
+++ b/style/components/_vendorLogin.scss
@@ -65,6 +65,10 @@
         h1 {
           font-size: 25px;
         }
+        input[type="submit"] {
+          background-color: rgb(122, 122, 122);
+          width: 100%;
+        }
         input[type="text"],
         input[type="password"] {
           padding: 10px;
