--- a/style/style1.css
+++ b/style/style1.css
@@ -2,7 +2,7 @@
   margin: 0px;
   padding: 0px;
   font-family: Segoe UI;
-  color: #b6dfff;
+  color: rgb(182, 223, 255);
 }
 
 .header {
@@ -206,7 +206,7 @@
     } */
 .loginF {
   width: 40%;
-  background-color: #00000054;
+  background-color: rgba(0, 0, 0, 0.3294117647);
   padding: 30px 30px;
   border-radius: 20px;
   height: -webkit-fit-content;
@@ -268,7 +268,7 @@
     } */
 .signupF {
   width: 40%;
-  background-color: #00000054;
+  background-color: rgba(0, 0, 0, 0.3294117647);
   padding: 30px 50px;
   border-radius: 20px;
   height: -webkit-fit-content;
@@ -322,7 +322,7 @@
 
 .signupF p {
   text-align: center;
-  color: #9fecff;
+  color: rgb(159, 236, 255);
   margin-top: 20px;
   margin-top: 30px;
 }
@@ -330,7 +330,7 @@
   background-color: #2952e3;
   padding: 5px 10px;
   border-radius: 20px;
-  color: white;
+  color: rgb(255, 255, 255);
   font-weight: bold;
   text-decoration: none;
   transition: 0.2s;
@@ -418,7 +418,7 @@
 }
 .body .PcContainer .core {
   padding: 20px;
-  background-color: #211f349c;
+  background-color: rgba(33, 31, 52, 0.6117647059);
   width: 100%;
   height: 500px;
   border-radius: 30px;
@@ -688,7 +688,7 @@ img {
   margin-top: 20px;
   padding: 10px 20px;
   background-color: #1b1927;
-  border: 2px solid fuchsia;
+  border: 2px solid rgb(255, 0, 255);
   border-radius: 20px;
   font-size: 20px;
   cursor: pointer;
@@ -723,7 +723,7 @@ img {
 }
 
 .vendorLogbg {
-  background-color: #eafcff;
+  background-color: rgb(234, 252, 255);
   width: 100vw;
   height: -webkit-fit-content;
   height: -moz-fit-content;
@@ -771,7 +771,7 @@ img {
 }
 .vendorLogbg .loginbox .vendorLoginFM .signupT button {
   padding: 7px 9px;
-  color: white;
+  color: rgb(255, 255, 255);
   background-color: #2952e3;
   font-weight: 600;
   font-size: 13px;
@@ -794,6 +794,10 @@ img {
 .vendorLogbg .loginbox .vendorLoginFM .loginFvendor h1 {
   font-size: 25px;
 }
+.vendorLogbg .loginbox .vendorLoginFM .loginFvendor input[type=submit] {
+  background-color: rgb(122, 122, 122);
+  width: 100%;
+}
 .vendorLogbg .loginbox .vendorLoginFM .loginFvendor input[type=text],
 .vendorLogbg .loginbox .vendorLoginFM .loginFvendor input[type=password] {
   padding: 10px;
@@ -809,8 +813,8 @@ img {
 }
 
 .adminbg {
-  background: #005566;
-  background: radial-gradient(circle, #005566 12%, #03002f 100%);
+  background: rgb(0, 85, 102);
+  background: radial-gradient(circle, rgb(0, 85, 102) 12%, rgb(3, 0, 47) 100%);
   height: 100vh;
   display: flex;
   align-items: center;
@@ -846,7 +850,7 @@ img {
 }
 .adminbg .adminMain .adminInnerForm form input[type=text],
 .adminbg .adminMain .adminInnerForm form input[type=password] {
-  color: #2b2b2b;
+  color: rgb(43, 43, 43);
   height: 30px;
   width: 90%;
   border-radius: 15px;
@@ -855,7 +859,7 @@ img {
 .adminbg .adminMain .adminInnerForm form input[type=submit] {
   width: 100%;
   background-color: #1aa4e2;
-  color: white;
+  color: rgb(255, 255, 255);
   font-weight: 700;
   font-size: 15px;
   border: none;
@@ -935,7 +939,13 @@ img {
 }
 .bodyA .mainA .productsEnlisted .productsAdmin .categoryH li {
   margin: 5px 0;
-  font-size: 16px;
+  font-size: 20px;
+  display: flex;
+  justify-content: space-between;
+}
+.bodyA .mainA .productsEnlisted .productsAdmin .categoryH li p {
+  margin-right: 20px;
+  font-weight: 600;
 }
 
 .top-msg {
