--- a/style/style1.scss
+++ b/style/style1.scss
@@ -16,6 +16,7 @@ $btncolor: #2952e3;
 @import "components/_profile";
 @import "components/vendorLogin";
 @import "components/vendorSignup";
+@import "components/_vendorHome";
 @import "components/_admin";
 @import "components/_adminHome";
 
