--- a/style/components/_vendorLogin.scss
+++ b/style/components/_vendorLogin.scss
@@ -66,8 +66,15 @@
           font-size: 25px;
         }
         input[type="submit"] {
-          background-color: rgb(122, 122, 122);
+          background-color: #2952e3;
+          color: white;
           width: 100%;
+          padding: 8px;
+          margin-top: 20px;
+          font-weight: 600;
+          font-size: 18px;
+          border: none;
+          border-radius: 10px;
         }
         input[type="text"],
         input[type="password"] {
@@ -75,11 +82,13 @@
           width: 100%;
           height: 30px;
           border-radius: 10px;
+          margin: 8px 0;
         }
         form {
           width: 100%;
           label {
-            margin: 50px 0px;
+            margin-left: 5px;
+            font-weight: 500;
           }
         }
       }
