--- a/style/components/_pcbuilder.scss
+++ b/style/components/_pcbuilder.scss
@@ -87,6 +87,9 @@
   .pc {
     // padding-right: 50px;
     margin-left: 65vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     // margin-bottom: 50px;
     position: -webkit-sticky;
     position: fixed;
@@ -94,6 +97,25 @@
 
     img {
       width: 350px;
+    }
+    input {
+      padding: 5px 10px;
+      background-color: #2e3249;
+      border: solid 2px #ad00ff;
+      border-radius: 15px;
+      width: 10vw;
+      height: 50px;
+      font-size: 20px;
+      transition: 0.2s ease-in-out;
+      margin-top: 20px;
+      // margin: 0 auto;
+      &:hover {
+        background-color: #ad00ff;
+        transform: scale(1.2);
+      }
+      &:active {
+        transform: scale(1);
+      }
     }
   }
 }
