--- a/style/components/_vendorHome.scss
+++ b/style/components/_vendorHome.scss
@@ -103,8 +103,82 @@ body.setting .setting {
         }
       }
     }
+    .popadddproduct {
+    }
   }
 }
+
+// popup
+.box {
+  // width: 40%;
+  // margin: 0 auto;
+  // background: rgba(255, 255, 255, 0.2);
+  // padding: 35px;
+  // border: 2px solid #fff;
+  // border-radius: 20px/50px;
+  // background-clip: padding-box;
+  // text-align: center;
+}
+
+.button {
+  font-size: 1em;
+  padding: 10px;
+  color: #fff;
+  // border: 2px solid #06d85f;
+  border-radius: 20px/50px;
+  text-decoration: none;
+  cursor: pointer;
+  transition: all 0.3s ease-out;
+}
+
+.overlay {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: rgba(0, 0, 0, 0.7);
+  transition: opacity 500ms;
+
+  visibility: hidden;
+  opacity: 0;
+}
+.overlay:target {
+  visibility: visible;
+  opacity: 1;
+}
+
+.popup {
+  margin: 200px auto;
+  padding: 20px;
+  background: #fff;
+  border-radius: 5px;
+  width: 30%;
+  position: relative;
+  transition: all 10s ease-in-out;
+  // transition: opacity 250ms 500ms ease, transform 350ms 500ms ease;
+}
+
+.popup .close {
+  position: absolute;
+  top: 10px;
+  right: 30px;
+  transition: all 200ms;
+  font-size: 30px;
+  font-weight: bold;
+  text-decoration: none;
+  color: #333;
+}
+.popup .close:hover {
+  color: #0606d8;
+  transform: scale(1.4);
+}
+.popup .content {
+  max-height: 30%;
+  overflow: auto;
+}
+
+// end
 
 .cpu table {
   border-collapse: collapse;
@@ -129,5 +203,19 @@ body.setting .setting {
   }
   tr td {
     text-align: center;
+  }
+}
+.mot {
+  margin-top: 20px;
+  table {
+    border-collapse: collapse;
+    border: black 2px solid;
+    width: 60vw;
+    thead {
+      border: black 2px solid;
+    }
+    tr td {
+      text-align: center;
+    }
   }
 }
