--- a/style/components/_bg.scss
+++ b/style/components/_bg.scss
@@ -1,6 +1,9 @@
+body {
+  min-height: fit-content;
+}
 .bg1 {
   /* height: 1080px; */
-  height: 100%;
+  height: fit-content;
   min-height: 100vh;
   width: 100%;
   background-color: #0f0e13;
@@ -10,8 +13,8 @@
 }
 
 .bg2 {
-  height: 100%;
-  min-height: 100vh;
+  min-height: fit-content;
+  min-height: 100vh !important;
 
   width: 100%;
   background-color: #0f0e13;
@@ -28,5 +31,6 @@
   display: flex;
   flex-direction: column;
   width: 100%;
+
   // align-items: center;
 }
