--- a/style/components/_loginF.scss
+++ b/style/components/_loginF.scss
@@ -67,6 +67,7 @@
 
 .loginF input[type="password"] {
   width: 100%;
+  padding-left: 10px;
   height: 40px;
   border-radius: 10px;
   margin-top: 10px;
