--- a/style/style1.css
+++ b/style/style1.css
@@ -156,9 +156,17 @@
   /* box-shadow: #2f71ff70 0px 0px 39px 0px;  */
 }
 
+body {
+  min-height: -webkit-fit-content;
+  min-height: -moz-fit-content;
+  min-height: fit-content;
+}
+
 .bg1 {
   /* height: 1080px; */
-  height: 100%;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
   min-height: 100vh;
   width: 100%;
   background-color: #0f0e13;
@@ -166,8 +174,10 @@
 }
 
 .bg2 {
-  height: 100%;
-  min-height: 100vh;
+  min-height: -webkit-fit-content;
+  min-height: -moz-fit-content;
+  min-height: fit-content;
+  min-height: 100vh !important;
   width: 100%;
   background-color: #0f0e13;
   background-image: radial-gradient(at 0% 0%, #100f15 0, transparent 50%), radial-gradient(at 50% 100%, #273359 0, transparent 50%);
@@ -240,6 +250,7 @@
 
 .loginF input[type=password] {
   width: 100%;
+  padding-left: 10px;
   height: 40px;
   border-radius: 10px;
   margin-top: 10px;
@@ -409,6 +420,8 @@
 }
 .body * {
   color: white;
+  margin: 0;
+  padding: 0;
 }
 .body .PcContainer {
   width: 58vw;
@@ -487,9 +500,35 @@
   position: -webkit-sticky;
   position: fixed;
   top: 125px;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+}
+.body .pc .detail {
+  width: 300px;
+  display: flex;
+  flex-direction: column;
+}
+.body .pc .detail div {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  font-size: 18px;
+}
+.body .pc .detail div .power::after {
+  content: "W";
+}
+.body .pc .detail div div {
+  font-weight: 700;
+}
+.body .pc .detail div #Tprice {
+  color: rgb(0, 255, 0);
+}
+.body .pc .detail div #Tprice::before {
+  content: "$";
 }
 .body .pc img {
-  width: 350px;
+  width: 320px;
 }
 .body .pc input {
   padding: 5px 10px;
