--- a/style/style1.scss
+++ b/style/style1.scss
@@ -19,6 +19,7 @@ $btncolor: #2952e3;
 @import "components/_vendorHome";
 @import "components/_admin";
 @import "components/_adminHome";
+@import "components/_vendorprofile";
 
 // eror msg styling
 .top-msg {
