--- a/style/components/_vendorHome.scss
+++ b/style/components/_vendorHome.scss
@@ -1,12 +1,16 @@
 body.dashboard .dashboard,
 body.products .products,
 body.orders .orders,
-body.setting .setting {
+body.profile .profile {
   // background-color: rgb(255, 255, 255);
   border-right: 10px solid #2952e3;
   a {
     color: #94abff;
   }
+}
+.vendorLO {
+  background-color: red !important;
+  margin: 0 auto;
 }
 .bodyV {
   * {
@@ -149,7 +153,7 @@ body.setting .setting {
 }
 
 .popup {
-  margin: 200px auto;
+  margin: 100px auto;
   padding: 20px;
   background: #fff;
   border-radius: 5px;
@@ -177,45 +181,182 @@ body.setting .setting {
   max-height: 30%;
   overflow: auto;
 }
+.popup {
+  form {
+    .titleA {
+      font-size: 18px;
+      font-weight: 700;
+      color: #006f9f;
+    }
+    input[type="button"] {
+      width: 100%;
+      padding: 10px;
+      font-weight: 400;
+      font-size: 15px;
+      font-weight: 700;
+    }
+    div {
+      width: 100%;
+      h3 {
+        margin-bottom: 10px;
+      }
+      label {
+        margin-top: 10px;
+        font-weight: 400;
+      }
 
+      input {
+        margin-bottom: 10px;
+        width: 100%;
+        border-radius: 15px;
+        height: 30px;
+      }
+    }
+    .catpop {
+      background-color: rgb(236, 236, 236);
+      width: 100%;
+      border: none;
+      border-radius: 20px;
+      margin-bottom: 10px;
+      padding: 10px;
+      padding-right: 40px !important;
+      -webkit-appearance: none;
+      -moz-appearance: none;
+      appearance: none;
+      font-weight: 500;
+      font-size: 18px;
+      margin-top: 10px;
+      * {
+        font-weight: 500;
+      }
+    }
+  }
+}
 // end
+option {
+  padding: 0 5px;
+  height: 100px;
+}
+.comment {
+  // .cpu table {
+  //   border-collapse: collapse;
+  //   border: black 2px solid;
+  //   width: 60vw;
+  //   thead {
+  //     border: black 2px solid;
+  //   }
+  //   tr td {
+  //     text-align: center;
+  //     height: 30px;
+  //   }
+  // }
+  // .gpu {
+  //   margin-top: 20px;
+  // }
+  // .gpu table {
+  //   border-collapse: collapse;
+  //   border: black 2px solid;
+  //   width: 60vw;
+  //   thead {
+  //     border: black 2px solid;
+  //   }
+  //   tr td {
+  //     text-align: center;
+  //     height: 30px;
+  //   }
+  // }
+  // .mot {
+  //   margin-top: 20px;
+  //   table {
+  //     border-collapse: collapse;
+  //     border: black 2px solid;
+  //     width: 60vw;
+  //     thead {
+  //       border: black 2px solid;
+  //     }
+  //     tr td {
+  //       text-align: center;
+  //       height: 30px;
+  //     }
+  //   }
+  // }
+  // .mainTable {
+  //   div {
+  //     margin-top: 20px;
+  //     table {
+  //       border-collapse: collapse;
+  //       border: black 2px solid;
+  //       width: 60vw;
+  //       thead {
+  //         border: black 2px solid;
+  //       }
+  //       tr td {
+  //         text-align: center;
+  //         height: 30px;
+  //       }
+  //     }
+  //   }
+  // }
+  //end
+}
 
-.cpu table {
+table {
+  margin-bottom: 30px;
+  margin-top: 5px;
   border-collapse: collapse;
   border: black 2px solid;
-  width: 60vw;
+  width: 70vw;
   thead {
     border: black 2px solid;
   }
   tr td {
+    height: 30px !important;
     text-align: center;
   }
-}
-.gpu {
-  margin-top: 20px;
-}
-.gpu table {
-  border-collapse: collapse;
-  border: black 2px solid;
-  width: 60vw;
-  thead {
-    border: black 2px solid;
-  }
-  tr td {
+  tbody tr td {
     text-align: center;
+    height: 40px !important;
   }
 }
-.mot {
-  margin-top: 20px;
-  table {
-    border-collapse: collapse;
-    border: black 2px solid;
-    width: 60vw;
-    thead {
-      border: black 2px solid;
-    }
-    tr td {
-      text-align: center;
-    }
+.btn-edit {
+  background-color: rgb(0, 141, 0);
+  padding: 4px 15px;
+  margin: 2px;
+  margin-right: 20px;
+  margin-left: -5px;
+  border-radius: 5px;
+  color: rgb(255, 255, 255);
+  text-decoration: none;
+  font-weight: 500;
+  box-shadow: 1px 1px 2px black;
+
+  &:hover {
+    background-color: rgb(0, 167, 0);
+    box-shadow: 2px 2px 5px black;
+    // color: black;
+  }
+  &:active {
+    box-shadow: 0 0 0 black;
+  }
+}
+.btn-delete {
+  background-color: rgb(255, 0, 0);
+  padding: 4px 15px;
+  margin: 2px;
+  margin-right: -10px;
+  margin-left: 15px;
+  border-radius: 5px;
+  color: rgb(255, 255, 255);
+  text-decoration: none;
+  font-weight: 500;
+  box-shadow: 1px 1px 2px black;
+
+  &:hover {
+    background-color: rgb(201, 0, 0);
+    box-shadow: 2px 2px 5px black;
+    // color: black;
+  }
+  &:active {
+    box-shadow: 0 0 0 black;
   }
 }
