--- a/style/style1.css
+++ b/style/style1.css
@@ -1379,6 +1379,21 @@ body.Aprofile .profile a {
   color: #94abff;
 }
 
+body.Ahome,
+body.Aproducts,
+body.Aorders,
+body.Ausers,
+body.Aprofile {
+  background: radial-gradient(circle, rgb(0, 85, 102) 12%, rgb(3, 0, 47) 100%);
+}
+body.Ahome *,
+body.Aproducts *,
+body.Aorders *,
+body.Ausers *,
+body.Aprofile * {
+  color: aliceblue;
+}
+
 .bodyA {
   height: 100vh;
   min-height: -webkit-fit-content;
