--- a/style/style1.scss
+++ b/style/style1.scss
@@ -20,6 +20,7 @@ $btncolor: #2952e3;
 @import "components/_vendorprofile";
 @import "components/_admin";
 @import "components/_adminHome";
+@import "components/_adminProducts";
 
 // eror msg styling
 .top-msg {
